Efficient way for reading imgs

--- a/Preprocessing/readimg_and_createdf.ipynb
+++ b/Preprocessing/readimg_and_createdf.ipynb
@@ -204,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1264,7 +1266,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -109723,7 +109727,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('Filtered_Img_DataFrame.csv')"
+    "df.to_csv('../data/Filtered_Img_DataFrame.csv')"
    ]
   },
   {
